<resources>
    <string name="app_name">iPeerCloud</string>
    <string name="sign_up">注册</string>
    <string name="log_in">登录</string>
    <string name="welcome">返回</string>
    <string name="newaccount">新账号</string>
    <string name="create">创建</string>
    <string name="emailorphone">邮箱</string>
    <string name="emailorphone_edt">输入邮箱地址</string>
    <string name="Password">密码</string>
    <string name="password">输入密码</string>
    <string name="tips_newaccount">输入一个有效的电子邮件地址，这将是您重置密码的唯一凭证，请牢记.</string>
    <string name="peercloud">国民存储</string>
    <string name="forgetpassword">重置密码</string>

    <string name="recents">历史使用</string>
    <string name="photos">手机相册</string>
    <string name="medias">多媒体</string>
    <string name="files">云端文件</string>
    <string name="settings">设置</string>
    <string name="search">搜索</string>

    <string name="logonuser">登录用户</string>
    <string name="camerasync">照片同步</string>
    <string name="off">关闭</string>
    <string name="on">打开</string>
    <string name="linkyourgoonas">绑定账号到私有云存储服务器</string>
    <string name="addnewinternet">服务器添加WIFI连接</string>
    <string name="ver">版本</string>
    <string name="clearcaches">清除软件缓存</string>
    <string name="invitefriends">邀请朋友一起使用Goonas</string>
    <string name="exitapp">退出当前账号，关闭app</string>

    <string name="msg_load_ing">加载中....</string>


    <string name="changepassword">修改密码</string>
    <string name="change">修改</string>
    <string name="oldpassword">旧密码</string>
    <string name="input_oldpassword">输入旧密码</string>
    <string name="newpassword">新密码</string>
    <string name="input_newpassword">输入新密码</string>
    <string name="changetips">输入旧密码和新密码，然后点击右上角的修改</string>


    <string name="link_cloud">绑定一台Goonas授权的服务器</string>
    <string name="link">绑定</string>
    <string name="linked">私有数据去存储服务器</string>
    <string name="hint_linked">输入服务器的UUID</string>
    <string name="unlinked">未链接</string>
    <string name="private_clould_uuid">私有云存储服务器的UUID号</string>
    <string name="link_tips">只有绑定了您的账号和私有数据云存储服务器后，您才可以跟私有数据云存储服务器通过互联网传输、同步数据</string>


    <string name="scan_code">扫描二维码</string>
    <string name="enter_uuid">手动输入UUID</string>
    <string name="cancel">取消</string>
    <string name="net_wrong">网络异常</string>

    <string name="download_file">离线下载到本地手机</string>
    <string name="delete_file">删除离线文件</string>


    <!--照片-->
    <string name="sort">排序</string>
    <string name="picture">照片</string>
    <!--设置-->

    <string name="camera_sync_all">所有</string>
    <string name="camera_sync_day">1天</string>
    <string name="camera_sync_month">一个月</string>
    <string name="camera_sync_year">一年</string>

    <string name="camera_sync">相机同步</string>
    <string name="camera_sync_detail">所有的照片将会自动同步到您设备中的相册文件夹中</string>
    <string name="sync_videos">视频同步</string>
    <string name="sync_videos_detail">所有的视频将会自动同步到您设备中的相册文件夹中</string>
    <string name="use_cellular_data">启用蜂窝数据</string>
    <string name="use_cellular_data_detail">此选项关闭后Goonas将不会使用蜂窝网络同步您的数据</string>

    <string name="setting_on_sync_camera">开启</string>
    <string name="setting_off_sync_camera">关闭</string>

    <string name="add_wifi_connection_to_sever">添加网络连接</string>
    <string name="add_wifi">添加</string>
    <string name="wifi_ssid">WIFI SSID</string>
    <string name="wifi_password">WIFI 密码</string>
    <string name="wifi_password_hint">请输入WIFI密码</string>

    <string name="gs_loading">载入中</string>
    <string name="gs_uploading">上传中</string>
</resources>
